# vtk-examples

./: .gitignore  README.md
code/cpp/: CMakeLists.txt  cppUtils
code/cpp/a_notebook/: env.txt
code/cpp/mhd_resample/: Mainwindow.cpp  Mainwindow.h  Mainwindow.ui  MhdResample.pro
code/cpp/mhd_stl/: CMakeLists.txt  ReadDICOMSeries.cpp  mhd2stl.cpp  parse_mhd.cpp  poly2vol.cpp  stl_operation.cpp
code/cpp/mhd_stl/mhd2stl/: mainwindow.cpp  mainwindow.h  mhd2stl.cpp  mhd2stl.h
code/cpp/mhd_stl/poly2vol/: Poly2volume.cpp  Poly2volume.h  mainwindow.cpp
code/cpp/vtk-examples/: InputandOutput.md  cpp-examples.md  cpp-examples.txt  cpp_note.txt
code/cpp/vtk-examples/config/: CMakeLists.txt  cpp-examples-zero.md
code/cpp/vtk-examples/cpp-examples/geometric-objects/: Axes.cxx  CMakeLists.txt  ColoredLines.cxx  Cube.cxx  EllipticalCylinder.cxx  EllipticalCylinderDemo.cxx
code/cpp/vtk-examples/cpp-examples/geometric-objects/OpenVR/: OpenVRFrustum.cxx
code/cpp/vtk-examples/cpp-examples/geometric-objects/cells/: CMakeLists.txt  Cell3DDemonstration.cxx  CellTypeSource.cxx  ConvexPointSet.cxx  Point.cxx  PolyLine.cxx  Vertex.cxx  myVtkUtils.cpp  myVtkUtils.h  vtkutils.cpp  vtkutils.h
code/cpp/vtk-examples/cpp-examples/geometric-objects/non-linear/: CMakeLists.txt
code/cpp/vtk-examples/cpp-examples/geometric-objects/parametric-objects/: CMakeLists.txt
code/cpp/vtk-examples/cpp-examples/geometric-objects/sources/: CMakeLists.txt
code/cpp/vtk-examples/cpp-examples/hello-world/: CMakeLists.txt
code/cpp/vtk-examples/cpp-examples/input-and-output/3d-file-formats/: CMakeLists.txt  ConvertFile.cxx  XGMLReader.cxx
code/cpp/vtk-examples/cpp-examples/input-and-output/3d-file-formats/standard-formats/input/: CMakeLists.txt  DEMReader.cxx  DelimitedTextReader.cxx  DumpXMLFile.cxx  IndividualVRML.cxx  ParticleReader.cxx  ReadAllPolyDataTypes.cxx  ReadAllPolyDataTypesDemo.cxx
code/cpp/vtk-examples/cpp-examples/input-and-output/3d-file-formats/standard-formats/output/: CMakeLists.txt  DelimitedTextWriter.cxx  SimplePointsWriter.cxx  WritePLY.cxx  WriteSTL.cxx
code/cpp/vtk-examples/cpp-examples/input-and-output/3d-file-formats/vtk-formats/: CMakeLists.txt
code/cpp/vtk-examples/cpp-examples/input-and-output/3d-file-formats/vtk-formats/output_1/: CMakeLists.txt
code/cpp/vtk-examples/cpp-examples/qt/: CMakeLists.txt
code/cpp/vtk-examples/cpp-examples/qt/unpassed/: CMakeLists_bak.txt  CMakeLists_std.txt
code/cpp/vtk-examples/cpp-examples/simple-operations/: CMakeLists.txt  DistanceBetweenPoints.cxx  DistancePointToLine.cxx  PerspectiveTransform.cxx  ProjectPointPlane.cxx  RandomSequence.cxx
code/cpp/vtk-examples/cpp-examples/texture-mapping/: AnimateVectors.cxx  CMakeLists_bak.txt
code/cpp/vtk-examples/cpp-examples/visualization/: CMakeLists.txt  CMakeLists_bak.txt  QuadricVisualization.cxx
code/cpp/vtk-examples/cpp-examples/working-with-3d-data/medical/: CMakeLists.txt  GenerateCubesFromLabels.cxx  GenerateCubesFromLabels.md  GenerateModelsFromLabels.cxx  GenerateModelsFromLabels_stls.cxx  GenerateModelsFromLabels_stls_simple.cxx  MedicalDemo1.cxx  MedicalDemo2.cxx  MedicalDemo3.cxx  MedicalDemo4.cxx  TissueLens.cxx
code/cpp/vtk-examples/cpp-examples/working-with-3d-data/working-with-structured-3d-data/vtkrectilineargrid/: CMakeLists.txt
code/cpp/vtk-examples/cpp-examples/working-with-3d-data/working-with-structured-3d-data/vtkstructuredgrid/: CMakeLists.txt  SGrid.cxx
code/cpp/vtk-examples/cpp-examples/working-with-3d-data/working-with-structured-3d-data/vtkstructuredpoints/: CMakeLists.txt  Vol.cxx
code/cpp/vtk-examples/cpp-examples/working-with-3d-data/working-with-unstructured-3d-data/vtkunstructuredgrid/: CMakeLists.txt  UGrid.cxx
code/cpp/vtk-examples/notebook/: issues.txt
code/cpp/vtk-examples/practice/_001_GeometricObjects/: CMakeLists.txt  CylinderExample.cxx
code/cpp/vtk-examples/practice/_002_SimpleOperations/: CMakeLists.txt  DistanceBetweenPoints.cxx  DistancePointToLine.cxx
code/cpp/vtk-examples/practice/_002_SimpleOperations/SimpleOperations/: CMakeLists.txt  CMakeLists_bak_2.txt  FloatingPointExceptions.cxx  GaussianRandomNumber.cxx  PerspectiveTransform.cxx  UniformRandomNumber.cxx
code/cpp/vtk-examples/vtk-tutorial/: CMakeLists.txt
code/cpp/vtk-examples/vtk-tutorial/Step1/Cxx/: CMakeLists.txt  Cone.cxx
code/cpp/vtk-examples/vtk-tutorial/Step2/Cxx/: CMakeLists.txt  Cone2.cxx
code/cpp/vtk-examples/vtk-tutorial/Step3/Cxx/: CMakeLists.txt  Cone3.cxx
code/cpp/vtk-examples/vtk-tutorial/Step4/Cxx/: CMakeLists.txt  Cone4.cxx
code/cpp/vtk-examples/vtk-tutorial/Step5/Cxx/: CMakeLists.txt  Cone5.cxx
code/cpp/vtk-examples/vtk-tutorial/Step6/Cxx/: CMakeLists.txt  Cone6.cxx
code/python/mhd2stl/: main.cpp  mhd2stl.py
code/python/mhd_stl/: mhd_stl.py
code/python/vtk-examples/: python-examples.txt
code/python/vtk-examples/collect/: GenerateTextureCoords.py  __init__.py
code/python/vtk-examples/config/: python-examples-zero.md  python-examples.md
code/python/vtk-examples/py-examples/input-and-output/3d-file-formats/standard-formats/input/: ReadSTL.py
notebook/stlmhd/: mhd2stl.h  repo_files.txt  stl2mhd.cpp
tools/: parse_toc.py
