cmake_minimum_required(VERSION 3.17)
project(vtk-examples)

set(CMAKE_CXX_STANDARD 14)

#include_directories(cppUtils/utils)
#add_subdirectory(cppUtils)
#list(APPEND EXTRA_LIBS cppUtils)

#add_subdirectory(mhd_stl)

#add_subdirectory(vtk-examples/practice/_001_HelloWorld/GeometricObjects)
#add_subdirectory(vtk-examples/practice/_002_SimpleOperations/SimpleOperations)

#add_subdirectory(vtk-examples/vtk-tutorial)
#add_subdirectory(vtk-examples/cpp-examples/hello-world)
#add_subdirectory(vtk-examples/cpp-examples/simple-operations)
#add_subdirectory(vtk-examples/cpp-examples/input-and-output/3d-file-formats)
#add_subdirectory(vtk-examples/cpp-examples/geometric-objects)
#add_subdirectory(vtk-examples/cpp-examples/visualization)
#add_subdirectory(vtk-examples/cpp-examples/texture-mapping)
#
add_subdirectory(vtk-examples/cpp-examples/working-with-3d-data/medical)
#add_subdirectory(vtk-examples/cpp-examples/working-with-3d-data/working-with-structured-3d-data/vtkstructuredgrid/)
#add_subdirectory(vtk-examples/cpp-examples/working-with-3d-data/working-with-structured-3d-data/vtkstructuredpoints/)
#add_subdirectory(vtk-examples/cpp-examples/working-with-3d-data/working-with-structured-3d-data/vtkrectilineargrid/)
#add_subdirectory(vtk-examples/cpp-examples/working-with-3d-data/working-with-unstructured-3d-data/vtkunstructuredgrid)

#add_subdirectory(vtk-examples/cpp-examples/qt)


